plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3' apply false
    id 'io.spring.dependency-management' version '1.1.3' apply false
}
apply plugin: 'java'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'


[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
//    jvmArgs '--enable-preview' -- with or without makes no much difference

}
